--- a/NotificationControll.xaml
+++ b/NotificationControll.xaml
@@ -1,17 +1,18 @@
-﻿<UserControl x:Class="SimpleReminder.Notification"
+﻿<UserControl x:Class="SimpleReminder.NotificationControll"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SimpleReminder"
              mc:Ignorable="d" 
-             d:DesignHeight="60" d:DesignWidth="800">
+             d:DesignHeight="60" d:DesignWidth="800"
+             Height="60">
     <Grid>
         <!-- Grid size definition -->
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.05*"/>
+            <RowDefinition Height="0.1*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="0.05*"/>
+            <RowDefinition Height="0.1*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.015*"/>
@@ -29,6 +30,6 @@
         <ComboBox Grid.Column="3" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Name="HoursPicker"/>
         <Label Grid.Column="4" Grid.Row="1" Content=":" Margin="0,-7,0,0" FontSize="25" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <ComboBox Grid.Column="5" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Name="MinutesPicker"/>
-        <TextBox Grid.Column="7" Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+        <TextBox Grid.Column="7" Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Name="NotificationMessage"/>
     </Grid>
 </UserControl>
