--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SimpleReminder"
         mc:Ignorable="d"
-        Title="Remindings" Height="450" Width="800">
+        Title="Remindings" Height="450" Width="800"
+        MinHeight="440" MinWidth="610">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
