--- a/Screens/MainScreen.xaml
+++ b/Screens/MainScreen.xaml
@@ -10,23 +10,25 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="10px"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="0.35*"/>
-            <RowDefinition Height="0.2*"/>
-            <RowDefinition Height="0.35*"/>
+            <RowDefinition Height="0.4*"/>
+            <RowDefinition Height="0.15*"/>
+            <RowDefinition Height="0.4*"/>
+            <RowDefinition Height="0.15*"/>
+            <RowDefinition Height="0.4*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="10px"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10px"/>
-            <ColumnDefinition Width="0.3*"/>
+            <ColumnDefinition Width="0.3*" MaxWidth="250px"/>
             <ColumnDefinition Width="0.02*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="10px"/>
         </Grid.ColumnDefinitions>
         <Button Grid.Column="1" Grid.Row="2" Content="Add" FontSize="30" FontWeight="DemiBold" Name="AddButton" Click="AddButtonClick"/>
-        <Button Grid.Column="1" Grid.Row="4" Content="Delete" FontSize="30" FontWeight="DemiBold" Name="DeleteButton"/>
-        <ScrollViewer Grid.Column="3" Grid.Row="1" Grid.RowSpan="5">
+        <ScrollViewer Grid.Column="3" Grid.Row="1" Grid.RowSpan="7">
             <StackPanel Name="NotificationsContainer"/>
         </ScrollViewer>
+        <Rectangle Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Grid.RowSpan="9" Panel.ZIndex="-1" Fill="White" Opacity="0.8"/>
     </Grid>
 </UserControl>
