--- a/Screens/MainScreen.xaml
+++ b/Screens/MainScreen.xaml
@@ -10,25 +10,36 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="10px"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="0.4*"/>
-            <RowDefinition Height="0.15*"/>
-            <RowDefinition Height="0.4*"/>
-            <RowDefinition Height="0.15*"/>
-            <RowDefinition Height="0.4*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="15px"/>
+            <RowDefinition Height="50px"/>
             <RowDefinition Height="10px"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10px"/>
-            <ColumnDefinition Width="0.3*" MaxWidth="250px"/>
-            <ColumnDefinition Width="0.02*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="0.5*"/>
+            <ColumnDefinition Width="0.4*"/>
+            <ColumnDefinition Width="0.5*"/>
             <ColumnDefinition Width="10px"/>
         </Grid.ColumnDefinitions>
-        <Button Grid.Column="1" Grid.Row="2" Content="Add" FontSize="30" FontWeight="DemiBold" Name="AddButton" Click="AddButtonClick"/>
-        <ScrollViewer Grid.Column="3" Grid.Row="1" Grid.RowSpan="7">
+        <Button Grid.Column="2" Grid.Row="3" Content="Add" FontSize="30" FontWeight="DemiBold" Name="AddButton" Click="AddButtonClick"/>
+        <ScrollViewer Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3">
             <StackPanel Name="NotificationsContainer"/>
         </ScrollViewer>
-        <Rectangle Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Grid.RowSpan="9" Panel.ZIndex="-1" Fill="White" Opacity="0.8"/>
+        <ContentControl Name="NotificationEditor" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Grid.RowSpan="9" Panel.ZIndex="-1">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="0.1*"/>
+                    <RowDefinition Height="0.8*"/>
+                    <RowDefinition Height="0.1*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.1*"/>
+                    <ColumnDefinition Width="0.8*"/>
+                    <ColumnDefinition Width="0.1*"/>
+                </Grid.ColumnDefinitions>
+                <Rectangle  Grid.ColumnSpan="3" Grid.RowSpan="3" Fill="White" Opacity="0.9"/>
+                <ContentControl Grid.Column="1" Grid.Row="1" Name="NotificationEditorContentControll"/>
+            </Grid>
+        </ContentControl>
     </Grid>
 </UserControl>
