--- a/Screens/NotificationScreen.xaml
+++ b/Screens/NotificationScreen.xaml
@@ -5,8 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SimpleReminder.Screens"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="600"
-             Background="Snow">
+             d:DesignHeight="300" d:DesignWidth="600">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.15*"/>
@@ -26,7 +25,7 @@
             <ColumnDefinition Width="0.25*"/>
             <ColumnDefinition Width="0.2*"/>
         </Grid.ColumnDefinitions>
-        <Button Grid.Column="0" Grid.Row="0" BorderThickness="0" Background="Snow" FontSize="22" Content="&lt;-" />
+        <Button Grid.Column="0" Grid.Row="0" BorderThickness="0" Background="Snow" FontSize="22" Content="&lt;-" Click="CloseButtonClick" />
         <DatePicker Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Name="DatePicker" SelectedDateChanged="DatePickerSelectedDateChanged"/>
         <ComboBox Grid.Column="3" Grid.Row="1" HorizontalAlignment="Stretch" Name="HoursPicker" SelectionChanged="HoursPickerSelectionChanged"/>
         <Label Grid.Column="4" Grid.Row="1" Content=":" Margin="0,-7,0,0" FontSize="25" HorizontalAlignment="Center" VerticalAlignment="Center"/>
