--- a/Screens/NotificationScreen.xaml
+++ b/Screens/NotificationScreen.xaml
@@ -19,9 +19,9 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.2*"/>
             <ColumnDefinition Width="0.5*"/>
-            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="0.2*"/>
             <ColumnDefinition Width="0.05*"/>
-            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="0.2*"/>
             <ColumnDefinition Width="0.2*"/>
         </Grid.ColumnDefinitions>
         <DatePicker Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" FontSize="22"
@@ -33,6 +33,7 @@
                   FontSize="35"  FontWeight="Bold" Name="MinutesPicker" SelectionChanged="MinutesPickerSelectionChanged"/>
         <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="4" BorderThickness="2" FontSize="20"
                  Name="NotificationMessage" TextChanged="NotificationMessageTextChanged" AcceptsReturn="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
-        <Button Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="4" Content="Save" FontWeight="DemiBold" FontSize="25" Name="SaveButton" Click="SaveButtonClick"/>
+        <Button Grid.Column="1" Grid.Row="5" Content="Save" FontWeight="DemiBold" FontSize="25" Name="SaveButton" Click="SaveButtonClick"/>
+        <Button Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="3" Content="Remove" FontWeight="DemiBold" FontSize="25" Name="RemoveButton" Click="RemoveButtonClick"/>
     </Grid>
 </UserControl>
