--- a/Screens/LoginScreen.xaml
+++ b/Screens/LoginScreen.xaml
@@ -27,8 +27,8 @@
             <ColumnDefinition Width="0.5*"/>
         </Grid.ColumnDefinitions>
         <Label Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" Content="Simple Reminder" FontSize="38" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="3" Name="loginBox" FontSize="32" VerticalAlignment="Center"/>
-        <PasswordBox Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="3" Name="passwordBox" FontSize="32" VerticalAlignment="Center"/>
-        <Button Grid.Column="2" Grid.Row="7" Content="Login" Name="loginButton" FontSize="26" FontWeight="DemiBold" Click="loginButton_Click"/>
+        <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="3" x:FieldModifier="private" Name="loginBox" FontSize="32" VerticalAlignment="Center"/>
+        <PasswordBox Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="3" x:FieldModifier="private" Name="passwordBox" FontSize="32" VerticalAlignment="Center"/>
+        <Button Grid.Column="2" Grid.Row="7" Content="Login" x:FieldModifier="private" Name="loginButton" FontSize="26" FontWeight="DemiBold" Click="loginButton_Click"/>
     </Grid>
 </UserControl>
