--- a/Screens/MainScreen.xaml
+++ b/Screens/MainScreen.xaml
@@ -21,11 +21,11 @@
             <ColumnDefinition Width="0.5*"/>
             <ColumnDefinition Width="10px"/>
         </Grid.ColumnDefinitions>
-        <Button Grid.Column="2" Grid.Row="3" Content="Add" FontSize="30" FontWeight="DemiBold" Name="AddButton" Click="AddButtonClick"/>
+        <Button Grid.Column="2" Grid.Row="3" Content="Add" FontSize="30" FontWeight="DemiBold" x:FieldModifier="private" Name="AddButton" Click="AddButtonClick"/>
         <ScrollViewer Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3">
-            <StackPanel Name="NotificationsContainer"/>
+            <StackPanel x:FieldModifier="private" Name="NotificationsContainer"/>
         </ScrollViewer>
-        <ContentControl Name="NotificationEditor" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Grid.RowSpan="9" Panel.ZIndex="-1">
+        <ContentControl x:FieldModifier="private" Name="NotificationEditor" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Grid.RowSpan="9" Panel.ZIndex="-1">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="0.1*"/>
@@ -37,8 +37,8 @@
                     <ColumnDefinition Width="0.8*"/>
                     <ColumnDefinition Width="0.1*"/>
                 </Grid.ColumnDefinitions>
-                <Rectangle  Grid.ColumnSpan="3" Grid.RowSpan="3" Fill="White" Opacity="0.9"/>
-                <ContentControl Grid.Column="1" Grid.Row="1" Name="NotificationEditorContentControll"/>
+                <Rectangle Grid.ColumnSpan="3" Grid.RowSpan="3" Fill="White" Opacity="0.9"/>
+                <ContentControl Grid.Column="1" Grid.Row="1" x:FieldModifier="private" Name="NotificationEditorContentControll"/>
             </Grid>
         </ContentControl>
     </Grid>
