--- a/Screens/NotificationScreen.xaml
+++ b/Screens/NotificationScreen.xaml
@@ -25,16 +25,16 @@
             <ColumnDefinition Width="0.2*"/>
             <ColumnDefinition Width="0.2*"/>
         </Grid.ColumnDefinitions>
-        <DatePicker Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" FontSize="22"
-                    Name="DatePicker" SelectedDateChanged="DatePickerSelectedDateChanged" DisplayDateStart="{x:Static sys:DateTime.Now}"/>
+        <DatePicker Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" FontSize="22" Focusable="False"
+                    x:FieldModifier="private" Name="DatePicker" DisplayDateStart="{x:Static sys:DateTime.Now}"/>
         <ComboBox Grid.Column="2" Grid.Row="1" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                  FontSize="35" FontWeight="Bold" Name="HoursPicker" SelectionChanged="HoursPickerSelectionChanged"/>
+                  FontSize="35" FontWeight="Bold" x:FieldModifier="private" Name="HoursPicker"/>
         <Label Grid.Column="3" Grid.Row="1" Content=":" Margin="0,-7,0,0" FontSize="25" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <ComboBox Grid.Column="4" Grid.Row="1" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                  FontSize="35"  FontWeight="Bold" Name="MinutesPicker" SelectionChanged="MinutesPickerSelectionChanged"/>
+                  FontSize="35"  FontWeight="Bold" x:FieldModifier="private" Name="MinutesPicker"/>
         <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="4" BorderThickness="2" FontSize="20"
-                 Name="NotificationMessage" TextChanged="NotificationMessageTextChanged" AcceptsReturn="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
-        <Button Grid.Column="1" Grid.Row="5" Content="Save" FontWeight="DemiBold" FontSize="25" Name="SaveButton" Click="SaveButtonClick"/>
-        <Button Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="3" Content="Remove" FontWeight="DemiBold" FontSize="25" Name="RemoveButton" Click="RemoveButtonClick"/>
+                 x:FieldModifier="private" Name="NotificationMessage" TextChanged="NotificationMessageTextChanged" AcceptsReturn="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
+        <Button Grid.Column="1" Grid.Row="5" Content="Save" FontWeight="DemiBold" FontSize="25" x:FieldModifier="private" Name="SaveButton" Click="SaveButtonClick"/>
+        <Button Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="3" Content="Remove" FontWeight="DemiBold" FontSize="25" x:FieldModifier="private" Name="RemoveButton" Click="RemoveButtonClick"/>
     </Grid>
 </UserControl>
