--- a/Screens/LoginScreen.xaml
+++ b/Screens/LoginScreen.xaml
@@ -20,15 +20,17 @@
             <RowDefinition Height="0.6*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.5*"/>
+            <ColumnDefinition Width="0.2*"/>
             <ColumnDefinition Width="0.25*"/>
             <ColumnDefinition Width="0.5*"/>
             <ColumnDefinition Width="0.25*"/>
-            <ColumnDefinition Width="0.5*"/>
+            <ColumnDefinition Width="0.2*"/>
         </Grid.ColumnDefinitions>
         <Label Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" Content="Simple Reminder" FontSize="38" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="3" x:FieldModifier="private" Name="loginBox" FontSize="32" VerticalAlignment="Center"/>
-        <PasswordBox Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="3" x:FieldModifier="private" Name="passwordBox" FontSize="32" VerticalAlignment="Center"/>
+        <Label Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Content="Login:" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+        <TextBox Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="2" x:FieldModifier="private" Name="loginBox" FontSize="32" VerticalAlignment="Center"/>
+        <Label Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Content="Password:" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+        <PasswordBox Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="2" x:FieldModifier="private" Name="passwordBox" FontSize="32" VerticalAlignment="Center"/>
         <Button Grid.Column="2" Grid.Row="7" Content="Login" x:FieldModifier="private" Name="loginButton" FontSize="26" FontWeight="DemiBold" Click="loginButton_Click"/>
     </Grid>
 </UserControl>
