--- a/Controlls/NotificationControl.xaml
+++ b/Controlls/NotificationControl.xaml
@@ -1,21 +1,13 @@
-﻿<UserControl x:Class="SimpleReminder.Controlls.NotificationControll"
+﻿<UserControl x:Class="SimpleReminder.Controlls.NotificationControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SimpleReminder"
              mc:Ignorable="d" 
              d:DesignHeight="150" d:DesignWidth="800"
              MinHeight="100" MaxHeight="200"
              MinWidth="600">
     <Grid>
-        <!-- Define base grid for whole Controll -->
-        <Grid.RowDefinitions>
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
         <!-- Put Button to base Grid. When user click - Button will produce
              event to open editing screen -->
         <Button Grid.Column="0" Grid.Row="0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Background="Transparent"
