--- a/Screens/LoginScreen.xaml
+++ b/Screens/LoginScreen.xaml
@@ -9,15 +9,17 @@
              MinHeight="370" MinWidth="380">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.4*"/>
+            <RowDefinition Height="0.3*"/>
             <RowDefinition Height="0.5*"/>
             <RowDefinition Height="0.22*"/>
             <RowDefinition Height="0.3*"/>
             <RowDefinition Height="0.07*"/>
             <RowDefinition Height="0.3*"/>
+            <RowDefinition Height="0.15*"/>
             <RowDefinition Height="0.3*"/>
+            <RowDefinition Height="0.04*"/>
             <RowDefinition Height="0.3*"/>
-            <RowDefinition Height="0.6*"/>
+            <RowDefinition Height="0.04*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.2*"/>
@@ -32,5 +34,6 @@
         <Label Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Content="Password:" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Right"/>
         <PasswordBox Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="2" x:FieldModifier="private" Name="passwordBox" FontSize="32" VerticalAlignment="Center"/>
         <Button Grid.Column="2" Grid.Row="7" Content="Login" x:FieldModifier="private" Name="loginButton" FontSize="26" FontWeight="DemiBold" Click="loginButton_Click"/>
+        <Button Grid.Column="2" Grid.Row="9" Content="Sign Up" x:FieldModifier="private" Name="registerButton" FontSize="26" FontWeight="DemiBold" Click="registerButton_Click"/>
     </Grid>
 </UserControl>
