--- a/SimpleReminder/Screens/MainScreen.xaml
+++ b/SimpleReminder/Screens/MainScreen.xaml
@@ -22,14 +22,14 @@
             <ColumnDefinition Width="0.5*"/>
             <ColumnDefinition Width="10px"/>
         </Grid.ColumnDefinitions>
-        <Button Grid.Column="3" Grid.Row="3" Content="Add" FontSize="30" FontWeight="DemiBold" x:FieldModifier="private" Name="AddButton" Click="AddButtonClick"/>
-        <Button Grid.Column="1" Grid.Row="3" FontSize="30" x:FieldModifier="private" Name="LogOutButton" Click="LogOutButtonClick">
+        <Button Grid.Column="3" Grid.Row="3" Content="Add" FontSize="30" FontWeight="DemiBold" Click="AddButtonClick"/>
+        <Button Grid.Column="1" Grid.Row="3" FontSize="30" Click="LogOutButtonClick">
             <fa:ImageAwesome Icon="PowerOff"/>
         </Button>
         <ScrollViewer Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="4">
             <StackPanel x:FieldModifier="private" Name="NotificationsContainer"/>
         </ScrollViewer>
-        <ContentControl x:FieldModifier="private" Name="NotificationEditor" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Grid.RowSpan="9" Panel.ZIndex="-1">
+        <ContentControl x:FieldModifier="private" Name="NotificationEditor" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Grid.RowSpan="2" Panel.ZIndex="-1">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="0.1*"/>
