--- a/SimpleReminder/Screens/NotificationScreen.xaml
+++ b/SimpleReminder/Screens/NotificationScreen.xaml
@@ -25,15 +25,15 @@
             <ColumnDefinition Width="0.2*"/>
         </Grid.ColumnDefinitions>
         <DatePicker Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" FontSize="22" Focusable="False"
-                    x:FieldModifier="private" Name="DatePicker" DisplayDateStart="{x:Static sys:DateTime.Now}"/>
+                    SelectedDate="{Binding SelectedDate, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" DisplayDateStart="{x:Static sys:DateTime.Now}"/>
         <ComboBox Grid.Column="2" Grid.Row="1" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                  FontSize="35" FontWeight="Bold" x:FieldModifier="private" Name="HoursPicker"/>
+                  FontSize="35" FontWeight="Bold" SelectedIndex="{Binding SelectedDate.Hour, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
         <Label Grid.Column="3" Grid.Row="1" Content=":" Margin="0,-7,0,0" FontSize="25" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <ComboBox Grid.Column="4" Grid.Row="1" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                  FontSize="35"  FontWeight="Bold" x:FieldModifier="private" Name="MinutesPicker"/>
+                  FontSize="35"  FontWeight="Bold" SelectedIndex="{Binding SelectedDate.Minute, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
         <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="4" BorderThickness="2" FontSize="20"
-                 x:FieldModifier="private" Name="NotificationMessage" TextChanged="NotificationMessageTextChanged" AcceptsReturn="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
-        <Button Grid.Column="1" Grid.Row="5" Content="Save" FontWeight="DemiBold" FontSize="25" Click="SaveButtonClick"/>
-        <Button Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="3" Content="Remove" FontWeight="DemiBold" FontSize="25" Click="RemoveButtonClick"/>
+                 Text="{Binding ReminderText, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" TextChanged="NotificationMessageTextChanged" AcceptsReturn="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
+        <Button Grid.Column="1" Grid.Row="5" Content="Save" FontWeight="DemiBold" FontSize="25" Command="{Binding}"/>
+        <Button Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="3" Content="Remove" FontWeight="DemiBold" FontSize="25" Command="{Binding}"/>
     </Grid>
 </UserControl>
