--- a/SimpleReminder/Screens/MainScreen.xaml
+++ b/SimpleReminder/Screens/MainScreen.xaml
@@ -22,14 +22,14 @@
             <ColumnDefinition Width="0.5*"/>
             <ColumnDefinition Width="10px"/>
         </Grid.ColumnDefinitions>
-        <Button Grid.Column="3" Grid.Row="3" Content="Add" FontSize="30" FontWeight="DemiBold" Click="AddButtonClick"/>
-        <Button Grid.Column="1" Grid.Row="3" FontSize="30" Click="LogOutButtonClick">
+        <Button Grid.Column="3" Grid.Row="3" Content="Add" FontSize="30" FontWeight="DemiBold" Command="{Binding AddRemindingCommand}"/>
+        <Button Grid.Column="1" Grid.Row="3" FontSize="30" Command="{Binding LogOutCommand}">
             <fa:ImageAwesome Icon="PowerOff"/>
         </Button>
         <ScrollViewer Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="4">
             <StackPanel x:FieldModifier="private" Name="NotificationsContainer"/>
         </ScrollViewer>
-        <ContentControl x:FieldModifier="private" Name="NotificationEditor" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Grid.RowSpan="2" Panel.ZIndex="-1">
+        <ContentControl Visibility="{Binding EditorVisibility, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5" Grid.RowSpan="5">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="0.1*"/>
@@ -42,7 +42,7 @@
                     <ColumnDefinition Width="0.1*"/>
                 </Grid.ColumnDefinitions>
                 <Rectangle Grid.ColumnSpan="3" Grid.RowSpan="3" Fill="White" Opacity="0.9"/>
-                <ContentControl Grid.Column="1" Grid.Row="1" x:FieldModifier="private" Name="NotificationEditorContentControll"/>
+                <ContentControl Grid.Column="1" Grid.Row="1" Content="{Binding EditorUi, Mode=OneWay}"/>
             </Grid>
         </ContentControl>
     </Grid>
