--- a/SimpleReminder/Screens/NotificationScreen.xaml
+++ b/SimpleReminder/Screens/NotificationScreen.xaml
@@ -26,11 +26,11 @@
         </Grid.ColumnDefinitions>
         <DatePicker Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" FontSize="22" Focusable="False"
                     SelectedDate="{Binding SelectedDate, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" DisplayDateStart="{x:Static sys:DateTime.Now}"/>
-        <ComboBox Grid.Column="2" Grid.Row="1" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                  FontSize="35" FontWeight="Bold" SelectedIndex="{Binding SelectedDate.Hour, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+        <ComboBox Grid.Column="2" Grid.Row="1" x:FieldModifier="private" Name="HoursPicker" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                  FontSize="35" FontWeight="Bold" SelectedIndex="{Binding Hours, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
         <Label Grid.Column="3" Grid.Row="1" Content=":" Margin="0,-7,0,0" FontSize="25" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <ComboBox Grid.Column="4" Grid.Row="1" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                  FontSize="35"  FontWeight="Bold" SelectedIndex="{Binding SelectedDate.Minute, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+        <ComboBox Grid.Column="4" Grid.Row="1" x:FieldModifier="private" Name="MinutesPicker" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
+                  FontSize="35"  FontWeight="Bold" SelectedIndex="{Binding Minutes, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
         <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="4" BorderThickness="2" FontSize="20"
                  Text="{Binding ReminderText, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" TextChanged="NotificationMessageTextChanged" AcceptsReturn="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
         <Button Grid.Column="1" Grid.Row="5" Content="Save" FontWeight="DemiBold" FontSize="25" Command="{Binding}"/>
