--- a/SimpleReminder/Screens/LoginScreen.xaml
+++ b/SimpleReminder/Screens/LoginScreen.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SimpleReminder.Screens"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="480" d:DesignWidth="800"
              MinHeight="370" MinWidth="380">
@@ -30,10 +29,10 @@
         </Grid.ColumnDefinitions>
         <Label Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" Content="Simple Reminder" FontSize="38" VerticalAlignment="Center" HorizontalAlignment="Center"/>
         <Label Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Content="Login:" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-        <TextBox Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="2" x:FieldModifier="private" Name="loginBox" FontSize="32" VerticalAlignment="Center"/>
+        <TextBox Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="2" Text="{Binding Login, Mode=OneWayToSource}" FontSize="32" VerticalAlignment="Center"/>
         <Label Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Content="Password:" FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-        <PasswordBox Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="2" x:FieldModifier="private" Name="passwordBox" FontSize="32" VerticalAlignment="Center"/>
-        <Button Grid.Column="2" Grid.Row="7" Content="Login" x:FieldModifier="private" Name="loginButton" FontSize="26" FontWeight="DemiBold" Click="loginButton_Click"/>
-        <Button Grid.Column="2" Grid.Row="9" Content="Sign Up" x:FieldModifier="private" Name="registerButton" FontSize="26" FontWeight="DemiBold" Click="registerButton_Click"/>
+        <PasswordBox Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="2" Name="Password" FontSize="32" VerticalAlignment="Center"/>
+        <Button Grid.Column="2" Grid.Row="7" Content="Login" FontSize="26" FontWeight="DemiBold" Command="{Binding LoginCommand}"  CommandParameter="{Binding ElementName=Password}"/>
+        <Button Grid.Column="2" Grid.Row="9" Content="Sign Up" FontSize="26" FontWeight="DemiBold" Command="{Binding SignUpCommand}"/>
     </Grid>
 </UserControl>
