--- a/SimpleReminder/Screens/NotificationScreen.xaml
+++ b/SimpleReminder/Screens/NotificationScreen.xaml
@@ -33,7 +33,7 @@
                   FontSize="35"  FontWeight="Bold" SelectedIndex="{Binding Minutes, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
         <TextBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="4" BorderThickness="2" FontSize="20"
                  Text="{Binding ReminderText, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" TextChanged="NotificationMessageTextChanged" AcceptsReturn="True" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto"/>
-        <Button Grid.Column="1" Grid.Row="5" Content="Save" FontWeight="DemiBold" FontSize="25" Command="{Binding}"/>
-        <Button Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="3" Content="Remove" FontWeight="DemiBold" FontSize="25" Command="{Binding}"/>
+        <Button Grid.Column="1" Grid.Row="5" Content="Save" FontWeight="DemiBold" FontSize="25" Command="{Binding SaveCommand}"/>
+        <Button Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="3" Content="Remove" FontWeight="DemiBold" FontSize="25" Command="{Binding DeleteCommand}"/>
     </Grid>
 </UserControl>
